fix: overflow on mobile

--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -47,6 +47,9 @@
     --ul-li-icon: fa-asterisk;
 }
 
+body {
+    overflow-x: hidden !important;
+}
 
 #site-head {
     background-size: contain !important;
